<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/asdasdsadsa"
    tools:context=".AddJobsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="380dp"
            android:padding="20dp">


            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/jobs_title"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Munka Címe"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/jobs_description"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_border"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"
                android:hint="Rövid leirás"
                android:padding="8dp" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/jobs_salary"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Pénz"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:drawablePadding="8dp"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/jobs_location"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="hely"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="Munka feladása"
                android:id="@+id/jobs_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "30dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="TextView" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>