<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/asdasdsadsa"
    tools:context=".EditPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="380dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/email_text_user"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:visibility="invisible"
                />


            <EditText
                android:id="@+id/edit_password_user"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/orange_border"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"
                android:hint="Új jelszó"
                android:padding="8dp" />

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/edit_repassword_user"
                android:background="@drawable/orange_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="Új jelszó újra"
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="Jelszó Módositása"
                android:id="@+id/editbutton_user"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "30dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>