...
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@drawable/asdasdsadsa">


    <Button
        android:id="@+id/editPasswordbutton2"
        android:layout_width="140dp"
        android:layout_height="68dp"
        android:layout_marginBottom="192dp"
        android:text="Jelszó Módositása"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joblistButtonForUsers"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/joblistButtonForUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
