...
                android:padding="8dp" />

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="Munkára Jelentkezés"
                android:id="@+id/apply_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "30dp"/>

            <TextView
                android:id="@+id/textView9"
...
