...
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="Adatok Módositása"
                android:id="@+id/editbutton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "30dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
