...
                android:drawableLeft="@drawable/baseline_people_24"
                android:drawablePadding="8dp"
                android:hint="Rövid leirás magadról"
                android:padding="8dp" />

            <Button
                android:id="@+id/accept_button"
                android:layout_width="126dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="Elfogad"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

            <Button
                android:id="@+id/declinebutton_button"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="Elutasít"
                android:textSize="18sp"
                app:cornerRadius="30dp" />
...
